objects/vlocity_cmt__CalculationProcedureVersion__c.object
<CustomObject>
    <description>Represents a version of a Vlocity Calculation Procedure.</description>
    <fields>
        <fullName>vlocity_cmt__ApplicableObject__c</fullName>
        <label>Applicable Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CalculationProcedureId__c</fullName>
        <label>Calculation Procedure</label>
        <referenceTo>vlocity_cmt__CalculationProcedure__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Procedure Versions</relationshipLabel>
        <relationshipName>PricingProcedureVersions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Constants__c</fullName>
        <label>Constants</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentStatus__c</fullName>
        <formula>IF(AND(vlocity_cmt__StartDateTime__c &lt; NOW(), vlocity_cmt__IsEnabled__c, OR(ISNULL(vlocity_cmt__EndDateTime__c), vlocity_cmt__EndDateTime__c &gt; NOW())), &quot;Active&quot;,IF(AND(NOT(ISNULL(vlocity_cmt__EndDateTime__c)),vlocity_cmt__EndDateTime__c &lt; NOW(), vlocity_cmt__IsEnabled__c), &quot;Expired&quot;,IF(AND(vlocity_cmt__StartDateTime__c &gt; NOW(), vlocity_cmt__IsEnabled__c), &quot;Pending&quot;, &quot;Inactive&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InputBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Procedure Versions</relationshipLabel>
        <relationshipName>VlocityCalculationProcedureVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InputDataRaptorBundleName__c</fullName>
        <formula>vlocity_cmt__InputBundleId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Input DataRaptor Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OutputBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Procedure Versions (Output DataRaptor Bundle)</relationshipLabel>
        <relationshipName>VlocityCalculationProcedureVersions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OutputDataRaptorBundleName__c</fullName>
        <formula>vlocity_cmt__OutputBundleId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Output DataRaptor Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostProcessorClass__c</fullName>
        <label>Post Processor Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PreProcessorClass__c</fullName>
        <label>Pre Processor Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Variables__c</fullName>
        <label>Variables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity Calculation Procedure Version</label>
    <nameField>
        <label>Calculation Procedure Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Procedure Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>